# voip

./: .gitignore  BUILD_GUIDE.md  CMakeLists.txt  QtUtils.h  README.md  cmake-qt-hint.txt  constants.h  test.d  voip-client.pro  voip-project.pro  voip-server.pro  voip-shared.pri
.github/workflows/: c-cpp-make.yml  cmake-multi-platform.yml  slsa-generic-provenance.yml
client/: AudioEngine.cpp  AudioEngine.h  CryptState.cpp  CryptState.h  CryptStateOCB2.cpp  CryptStateOCB2.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  ManualPlugin.h  OpusCodec.cpp  OpusCodec.h  asio_hybrid_client.cpp  audioinput.cpp  audiooutput.cpp  audiooutput.h  audiopreprocessor.cpp  audiopreprocessor.h  client.pro  connection.cpp  connection.h  control_client.cpp  control_client.h  echocanceller.cpp  echocanceller.h  main.cpp  packetdatastream.cpp  packetdatastream.h
client/audio/: AecProcessor.cpp  AecProcessor.h  AudioPipeline.cpp  AudioPipeline.h  AudioPreprocessor.cpp  AudioPreprocessor.h  AudioProcessor.cpp  AudioProcessor.h  NoiseSuppressor.cpp  NoiseSuppressor.h  codec_opus.cpp  codec_opus.h  engine_jitter.cpp  engine_jitter.h  resampler.cpp  resampler.h  wasapi_capture.cpp  wasapi_capture.h  wasapi_playback.cpp  wasapi_playback.h
client/crypto/: CryptState.h  CryptStateOCB2.h
client/hybrid/: server_discovery_service.cpp  server_discovery_service.h
client/qt/: CMakeLists.txt  README_QT.md
client/qt/src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
client/webrtc/: AudioTransportShim.h  control_client.cpp  control_client.h  network.cpp  network.h
local-deps/: README.md
local-deps/qt6/include/QtCharts/: qtcharts-config.h  qtchartsversion.h
local-deps/qt6/include/QtChartsQml/: qtchartsqmlversion.h
local-deps/qt6/include/QtConcurrent/: qtconcurrentversion.h
local-deps/qt6/include/QtCore/: qarraydataops.h  qarraydatapointer.h  qchar.h  qconfig.h  qfloat16.h  qhash.h  qhashfunctions.h  qlist.h  qmargins.h  qpoint.h  qsize.h  qstringview.h  qtcoreversion.h  qtdeprecationmarkers.h
local-deps/qt6/include/QtDBus/: qtdbusversion.h
local-deps/qt6/include/QtDesigner/: qtdesignerversion.h
local-deps/qt6/include/QtDesignerComponents/: qtdesignercomponentsversion.h
local-deps/qt6/include/QtDeviceDiscoverySupport/: qtdevicediscoverysupportversion.h
local-deps/qt6/include/QtExamplesAssetDownloader/: qtexamplesassetdownloaderversion.h
local-deps/qt6/include/QtFFmpegMediaPluginImpl/: qtffmpegmediapluginimplversion.h
local-deps/qt6/include/QtFbSupport/: qtfbsupportversion.h
local-deps/qt6/include/QtGui/: qmatrix4x4.h  qpainterpath.h  qtgui-config.h  qtguiversion.h
local-deps/qt6/include/QtHelp/: qthelpversion.h
local-deps/qt6/include/QtJpeg/: jconfig.h
local-deps/qt6/include/QtLabsAnimation/: qtlabsanimationversion.h
local-deps/qt6/include/QtLabsFolderListModel/: qtlabsfolderlistmodelversion.h
local-deps/qt6/include/QtLabsPlatform/: qtlabsplatformversion.h
local-deps/qt6/include/QtLabsQmlModels/: qtlabsqmlmodelsversion.h
local-deps/qt6/include/QtLabsSettings/: qtlabssettingsversion.h
local-deps/qt6/include/QtLabsSharedImage/: qtlabssharedimageversion.h
local-deps/qt6/include/QtLabsSynchronizer/: qtlabssynchronizerversion.h
local-deps/qt6/include/QtLabsWavefrontMesh/: qtlabswavefrontmeshversion.h
local-deps/qt6/include/QtMultimedia/: qaudio.h  qtmultimedia-config.h  qtmultimediaversion.h
local-deps/qt6/include/QtMultimediaQuick/: QtMultimediaQuickDepends  qtmultimediaquickversion.h
local-deps/qt6/include/QtMultimediaTestLib/: qtmultimediatestlibversion.h
local-deps/qt6/include/QtMultimediaWidgets/: qgraphicsvideoitem.h  qtmultimediawidgetsversion.h
local-deps/qt6/include/QtNetwork/: qabstractsocket.h  qtnetwork-config.h  qtnetworkversion.h
local-deps/qt6/include/QtOpenGL/: qtopenglversion.h
local-deps/qt6/include/QtOpenGLWidgets/: qtopenglwidgetsversion.h
local-deps/qt6/include/QtPacketProtocol/: qtpacketprotocolversion.h
local-deps/qt6/include/QtPrintSupport/: qtprintsupport-config.h  qtprintsupportversion.h
local-deps/qt6/include/QtQml/: qjsengine.h  qjslist.h  qqmllist.h  qtqmlversion.h
local-deps/qt6/include/QtQmlAssetDownloader/: qtqmlassetdownloaderversion.h
local-deps/qt6/include/QtQmlCompiler/: qtqmlcompilerversion.h
local-deps/qt6/include/QtQmlCore/: qtqmlcoreversion.h
local-deps/qt6/include/QtQmlDebug/: qtqmldebugversion.h
local-deps/qt6/include/QtQmlDom/: qtqmldomversion.h
scripts/: bootstrap-deps.ps1
server/: Ban.h  ChannelListenerManager.h  ClientType.h  DBWrapper.h  Group.h  HostAddress.h  SSL.h  ServerUserInfo.h  User.h  asio_hybrid_server.cpp  connection.cpp  connection.h  control_server.cpp  control_server.h  main.cpp  meta.h  server.cpp  server.h  server.pro  serveruser.cpp  serveruser.h
server/database/: ConnectionParameter.h
server/hybrid/: client_registry.cpp  client_registry.h
server/nox/database/: DBUserData.h  UserProperty.h
server/permission/: permission_manager.cpp  permission_manager.h
server/sfu/: sfu.cpp
shared/: ACL.cpp  ACL.h  Audio.cpp  Audio.h  AudioOutputToken.h  AudioReceiverBuffer.cpp  AudioReceiverBuffer.h  ByteSwap.h  Channel.h  ClientUser.h  DBState.h  EchoCancelOption.cpp  EchoCancelOption.h  MumbleConstants.h  MumbleUDP.proto  Nox.pb.cc  Nox.pb.h  Nox.proto  NoxProtocol.cpp  NoxProtocol.h  NoxUDP.pb.cc  NoxUDP.pb.h  QuitBehavior.h  SearchDialog.h  ServerAddress.h  Settings.cpp  Settings.h  Timer.cpp  Timer.h  Version.cpp  Version.h  VolumeAdjustment.cpp  VolumeAdjustment.h  audioinput.cpp  audioinput.h  audiooutput.h  connection.h  cryptstate.cpp  cryptstate.h  noxConstants.h  (+5 more)
shared/asio/: net_compat.h
shared/hybrid/: control_messages.h
shared/protocol/: AudioPacket.cpp  AudioPacket.h  ControlPacket.cpp  ControlPacket.h  PacketDataStream.cpp  PacketDataStream.h  Version.cpp  Version.h  VolumeAdjustment.cpp  VolumeAdjustment.h  control.proto  control_protocol.h  control_wire.cpp  control_wire.h  network_packet.h  protobuf_control_codec.h
shared/utils/: ByteBuffer.cpp  ByteBuffer.h  Logger.cpp  Logger.h  Timer.cpp  Timer.h
tools/: opus_portaudio_probe.cpp
(+277 files in other folders)
